# smena-check

./: Dockerfile-dev  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
checks/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
checks/migrations/: 0001_initial.py  0002_check_order_id.py  0003_check_pdf.py  0004_alter_check_status.py
core/: settings.py  urls.py
order/: serializers.py  service.py  tasks.py  urls.py  views.py
order/templates/: client_check.html  kitchen_check.html
